# ppx_tuple_record_apply

./: LICENSE  README.md  ppx_rapper.opam
src/: dune  ppx_rapper.ml
test/: dune  test.ml
